--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <title>Culebrita de Amor</title>
+  <meta name="description" content="Un juego de amor para Nayeli">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="Culebrita de Amor">
   <link rel="stylesheet" href="estilos.css">
   <link rel="manifest" href="manifest.json" />
   <meta name="theme-color" content="#ff69b4">
+  <link rel="icon" href="icon-192.png">
 </head>
 <body>
   <h1>💖 Jueguito para mi ojitos de uva ❤️ Nayeli 💖</h1>
-  <h1>💖 Si lo completa su recompensa llegará de alguna forma 💖</h1>
+  <h2>💖 Si lo completa su recompensa llegará de alguna forma 💖</h2>
 
   <canvas id="game" width="300" height="300"></canvas>
 
@@ -21,11 +26,11 @@
   </div>
 
   <div id="controls">
-    <div><button class="btn" onclick="changeDirection('up')">⬆️</button></div>
+    <div><button class="btn" onclick="changeDirection('up')" aria-label="Mover arriba">⬆️</button></div>
     <div class="btn-row">
-      <button class="btn" onclick="changeDirection('left')">⬅️</button>
-      <button class="btn" onclick="changeDirection('down')">⬇️</button>
-      <button class="btn" onclick="changeDirection('right')">➡️</button>
+      <button class="btn" onclick="changeDirection('left')" aria-label="Mover izquierda">⬅️</button>
+      <button class="btn" onclick="changeDirection('down')" aria-label="Mover abajo">⬇️</button>
+      <button class="btn" onclick="changeDirection('right')" aria-label="Mover derecha">➡️</button>
     </div>
   </div>
 
@@ -33,16 +38,28 @@
   <div id="message"></div>
   <button id="restart" onclick="restartGame()">Volver a jugar</button>
   <button onclick="togglePause()">⏸️ Pausar / Reanudar</button>
-  <img id="finalImage" src="icon-512.png" style="display:none; margin-top: 15px; max-width: 90%;" />
+  <img id="finalImage" src="icon-512.png" alt="Recompensa para Nayeli" style="display:none; margin-top: 15px; max-width: 90%;" />
 
   <script src="juego.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('sw.js')
-        .then(() => console.log('Service Worker registrado ✅'))
-        .catch(err => console.error('Error al registrar el SW 😢', err));
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('sw.js')
+          .then(registration => {
+            console.log('ServiceWorker registrado con éxito:', registration.scope);
+            // Verificar actualizaciones cada vez que se carga la página
+            registration.update();
+          })
+          .catch(error => {
+            console.error('Error al registrar el ServiceWorker:', error);
+          });
+      });
     }
+
+    // Mostrar instrucciones al inicio
+    window.addEventListener('DOMContentLoaded', () => {
+      document.getElementById('message').innerText = 'Usa los botones o las flechas del teclado para moverte';
+    });
   </script>
 </body>
 </html>
-
